Updated text on cards- next time add hover effect

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,20 +1,19 @@
 ---
 title: Daniel Gordon
 ---
-<script src="javascripts/modernizr.min.js"></script>
 <!-- Main -->
-  <section class="main" id="home">
-   <div class="page">
-    <div class="wrapper">
-     <div class="container">
-      <h1 class="heading">Daniel Gordon</h1>
-      <p>
-       <span class="rotate">Sociologist, Entrepreneur, Ruby-ist, Freelancer, Software Developer, Music Lover. </span>
-     </p>
-   </div>
-   <div class="arrow-down">
-    <a class="scroll" href="#me" id="scroll"><i class="fa fa-angle-double-down"></i></a>
-  </div>
+<section class="main" id="home">
+ <div class="page">
+  <div class="wrapper">
+   <div class="container">
+    <h1 class="heading">Daniel Gordon</h1>
+    <p>
+     <span class="rotate">Sociologist, Entrepreneur, Ruby-ist, Freelancer, Software Developer, Music Lover. </span>
+   </p>
+ </div>
+ <div class="arrow-down">
+  <a class="scroll" href="#me" id="scroll"><i class="fa fa-angle-double-down"></i></a>
+</div>
 </div>
 </div>
 </section>
@@ -33,14 +32,14 @@ title: Daniel Gordon
  <div class="col-sm-4">
   <img src="images/daniel.jpg" class="img-responsive about-img" />
 </div>
-<div class="col-sm-8 wow fadeInRight" data-wow-duration="0.7s" data-wow-delay="0s">
+<div class="col-sm-8">
+<div class="about">
   <p class="lead">
    I'm a Sociologist currently learning how to build web applications using Ruby on Rails.
  </p>
  <p>
   After graduating in Sociology on a thesis regarding young entrepreneurs in Shenzhen <em>(considered the Silicon Valley of hardware)</em> my interest in the the tech- and startup scene was sparked. Upon following a traineeship towards social entrepreneurship and starting my own social startup I decided I wanted to learn how to code. <a href="http://www.lewagon.org/en">Le Wagon</a> Dev bootcamp is currently giving me the tools to work in a start-up as a developer or to take my own startup to the next level.
 </p>
-
 </div>
 </div>
 </div>
@@ -49,14 +48,13 @@ title: Daniel Gordon
 
 <!-- Section -->
 <section class="section">
- <div class="container">
-  <div class="row">
-   <div class="col-sm-12 text-center">
-     <a href="https://github.com/DanielGordon1"><i class="fa fa-github" style="font-size: 80px;"></i></a>
-   </div>
- </div>
-</div>
-</div>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12 text-center">
+        <a href="https://github.com/DanielGordon1"><i class="fa fa-github" style="font-size: 80px;"></i></a>
+      </div>
+    </div>
+  </div>
 </section>
 
 <!-- Work Experience -->
@@ -74,7 +72,7 @@ title: Daniel Gordon
   <ul class="v-timeline mt50">
     <li>
       <time class="v-time"><span>2015 - present</span></time>
-      <div class="v-icon" data-toggle="collapse" data-target="#toggle-1"><i class="fa fa-minus"></i></div>
+      <!-- <div class="v-icon" data-toggle="collapse" data-target="#toggle-1"></div> -->
       <div class="v-label">
         <h4 data-toggle="collapse" data-target="#toggle-1">Social Entrepreneur</h4>
         <p id="toggle-1" class="collapse in"> Co-founder of <a href="http://ouwetaart.amsterdam">OuweTaart.amsterdam</a>, this platform is designed to bring together two groups in society that not often enough have the pleasure to spend time with each other. By facilitating the platform where demand and supply meet we hope to provide elder citizens with an increase in personal value creation and young people with the option to buy an artisanal product or service made especially for them.
@@ -82,7 +80,7 @@ title: Daniel Gordon
       </li>
       <li>
         <time class="v-time"><span>2015 - Present</span></time>
-        <div class="v-icon" data-toggle="collapse" data-target="#toggle-2"><i class="fa fa-plus"></i></div>
+        <!-- <div class="v-icon" data-toggle="collapse" data-target="#toggle-2"></div> -->
         <div class="v-label">
          <h4 data-toggle="collapse" data-target="#toggle-2">Brainstormer</h4>
          <p id="toggle-2" class="collapse">Denk-Tenk is about the activation of creative and innovative thinking processes.</p>
@@ -90,7 +88,7 @@ title: Daniel Gordon
      </li>
      <li>
       <time class="v-time"><span>2015</span></time>
-      <div class="v-icon" data-toggle="collapse" data-target="#toggle-3"><i class="fa fa-plus"></i></div>
+      <!-- <div class="v-icon" data-toggle="collapse" data-target="#toggle-3"></div> -->
       <div class="v-label">
        <h4 data-toggle="collapse" data-target="#toggle-3">Trainee</h4>
        <p id="toggle-3" class="collapse"><a href="http://www.starters4communities.nl">Starters4Communities</a><br> By linking starters on the Labor Market to entrepreneurial neighborhood initiatives. Building a bridge between young talent, residents, education, government, entrepreneurs, welfare &amp; businesses. Changing the world by exercising entrepreneurship in a social way with passion and own initiative.Being able to learn in practice. Learning whilst creating value for yourself, but also for another, and for society at large. By using new forms of cooperation and design thinking we innovate together; a bottom-up search for the solutions and challenges of todays world..</p>
@@ -98,7 +96,7 @@ title: Daniel Gordon
    </li>
    <li>
     <time class="v-time"><span>2010-2015</span></time>
-    <div class="v-icon" data-toggle="collapse" data-target="#toggle-4"><i class="fa fa-plus"></i></div>
+    <!-- <div class="v-icon" data-toggle="collapse" data-target="#toggle-4"></div> -->
     <div class="v-label">
      <h4 data-toggle="collapse" data-target="#toggle-4">Manager/Assistant-Manager</h4>
      <p id="toggle-4" class="collapse">De Biertuin Amsterdam (Bar), Kade58 (Restaurant).</p>
@@ -115,10 +113,10 @@ title: Daniel Gordon
     <div class="col-xs-12">
       <div class="card" style="background-image: url('images/shenzhen-card.jpg');">
         <div class="card-category">
-          2015
+          2015 - Shenzhen
         </div>
         <div class="card-description">
-          <p> I spent 3 months in South-China in Shenzhen, also dubbed the Silicon Valley of hardware, to gather information for my Masters' Research into young small-scale entrepreneurs. A collaboration between the International New Town Institute, the University of Amsterdam and the Shenzhen Center for Design.</p>
+          <!-- <p> I spent 3 months in South-China in Shenzhen, also dubbed the Silicon Valley of hardware, to gather information for my Masters' Research into young small-scale entrepreneurs. A collaboration between the International New Town Institute, the University of Amsterdam and the Shenzhen Center for Design.</p> -->
         </div>
       </div>
     </div>
@@ -139,7 +137,7 @@ title: Daniel Gordon
       <ul class="v-timeline mt50">
         <li>
           <time class="v-time"><span>2016</span></time>
-          <div class="v-icon" data-toggle="collapse" data-target="#toggle-6"><i class="fa fa-minus"></i></div>
+          <!-- <div class="v-icon" data-toggle="collapse" data-target="#toggle-6"><i class="fa fa-minus"></i></div> -->
           <div class="v-label">
            <h4 data-toggle="collapse" data-target="#toggle-6">Le Wagon - Fullstack Dev
             Bootcamp</h4>
@@ -148,7 +146,7 @@ title: Daniel Gordon
         </li>
         <li>
           <time class="v-time"><span>2014-2015</span></time>
-          <div class="v-icon" data-toggle="collapse" data-target="#toggle-7"><i class="fa fa-plus"></i></div>
+          <!-- <div class="v-icon" data-toggle="collapse" data-target="#toggle-7"><i class="fa fa-plus"></i></div> -->
           <div class="v-label">
            <h4 data-toggle="collapse" data-target="#toggle-7"> Master of Science in Sociology</h4>
            <p id="toggle-7" class="collapse"><a href="http://gsss.uva.nl/programmes"> Graduate School of the Social Sciences</a><br>Focus on Urban and Organizational Sociology. Final thesis written about entrepreneurship among young people in Shenzhen(China); data was gathered on location. University of Amsterdam, Amsterdam, The Netherlands.</p>
@@ -156,7 +154,7 @@ title: Daniel Gordon
        </li>
        <li>
         <time class="v-time"><span>2010-2013</span></time>
-        <div class="v-icon" data-toggle="collapse" data-target="#toggle-8"><i class="fa fa-plus"></i></div>
+        <!-- <div class="v-icon" data-toggle="collapse" data-target="#toggle-8"><i class="fa fa-plus"></i></div> -->
         <div class="v-label">
           <h4 data-toggle="collapse" data-target="#toggle-8">Bachelor of Science in Sociology</h4>
           <p id="toggle-8" class="collapse">
@@ -190,20 +188,20 @@ title: Daniel Gordon
       <div class="col-xs-12 col-sm-6">
         <div class="card" style="background-image: url('images/card-SEA.jpg');">
           <div class="card-category">
-            2013-2014
+            2013/2014 - SEA
           </div>
           <div class="card-description">
-            <p> From December 2013 until april 2014 I spent four months travelling through SEA visiting Thailand, Laos, Cambodia, Vietnam, Malaysia and Indonesia by bus, train, plane and motorbike. </p>
+            <!-- <p> From December 2013 until april 2014 I spent four months travelling through SEA visiting Thailand, Laos, Cambodia, Vietnam, Malaysia and Indonesia by bus, train, plane and motorbike. </p> -->
           </div>
         </div>
       </div>
       <div class="col-xs-12 col-sm-6">
         <div class="card" style="background-image: url('images/card-jamaica.jpg');">
           <div class="card-category">
-            2011
+            2011 - Jamaica
           </div>
           <div class="card-description">
-            <p> After the first year of my Bachelor I visited my family in Jamaica for the first time in 15 years. This helped me to come closer to my roots. </p>
+            <!-- <p> After the first year of my Bachelor I visited my family in Jamaica for the first time in 15 years. This helped me to come closer to my roots. </p> -->
           </div>
         </div>
       </div>
