--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -91,7 +91,7 @@ title: Daniel Gordon
       <!-- <div class="v-icon" data-toggle="collapse" data-target="#toggle-3"></div> -->
       <div class="v-label">
        <h4 data-toggle="collapse" data-target="#toggle-3">Trainee</h4>
-       <p id="toggle-3" class="collapse"><a href="http://www.starters4communities.nl">Starters4Communities</a><br> By linking starters on the Labor Market to entrepreneurial neighborhood initiatives. Building a bridge between young talent, residents, education, government, entrepreneurs, welfare &amp; businesses. Changing the world by exercising entrepreneurship in a social way with passion and own initiative.Being able to learn in practice. Learning whilst creating value for yourself, but also for another, and for society at large. By using new forms of cooperation and design thinking we innovate together; a bottom-up search for the solutions and challenges of todays world..</p>
+       <p id="toggle-3" class="collapse"><a href="http://www.starters4communities.nl">Starters4Communities</a><br> By linking starters on the Labor Market to entrepreneurial neighborhood initiatives and using new forms of cooperation and design thinking we innovate together; a bottom-up search for the solutions and challenges of todays world.</p>
      </div>
    </li>
    <li>
