--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -8,7 +8,7 @@ title: Daniel Gordon
    <div class="container">
     <h1 class="heading">Daniel Gordon</h1>
     <p>
-     <span class="rotate">Sociologist, Entrepreneur, Ruby-ist, Freelancer, Software Developer, Music Lover. </span>
+     <span class="hobbies">Sociologist, Entrepreneur, Ruby-ist, Freelancer, Software Developer, Music Lover. </span>
    </p>
  </div>
  <div class="arrow-down">
@@ -33,13 +33,13 @@ title: Daniel Gordon
   <img src="images/daniel.jpg" class="img-responsive about-img" />
 </div>
 <div class="col-sm-8">
-<div class="about">
-  <p class="lead">
-   I'm a Sociologist currently learning how to build web applications using Ruby on Rails.
- </p>
- <p>
-  After graduating in Sociology on a thesis regarding young entrepreneurs in Shenzhen <em>(considered the Silicon Valley of hardware)</em> my interest in the the tech- and startup scene was sparked. Upon following a traineeship towards social entrepreneurship and starting my own social startup I decided I wanted to learn how to code. <a href="http://www.lewagon.org/en">Le Wagon</a> Dev bootcamp is currently giving me the tools to work in a start-up as a developer or to take my own startup to the next level.
-</p>
+  <div class="about">
+    <p class="lead">
+     I'm a Sociologist that shifted to building web applications using Ruby on Rails.
+   </p>
+   <p>
+    After graduating in Sociology on a thesis regarding young entrepreneurs in Shenzhen <em>(considered the Silicon Valley of hardware)</em> my interest in the the tech- and startup scene was sparked. Upon following a traineeship towards social entrepreneurship and starting my own social startup I decided I wanted to learn how to code. <a href="http://www.lewagon.org/en">Le Wagon</a> Dev bootcamp gave me the tools to work in a tech-company as a developer or to take my own startup to the next level.
+  </p>
 </div>
 </div>
 </div>
@@ -68,40 +68,47 @@ title: Daniel Gordon
 </div>
 <div class="row">
  <div class="col-sm-12">
-
   <ul class="v-timeline mt50">
     <li>
-      <time class="v-time"><span>2015 - present</span></time>
-      <!-- <div class="v-icon" data-toggle="collapse" data-target="#toggle-1"></div> -->
+      <time class="v-time"><span>2016 - Present</span></time>
+      <!-- <div class="v-icon" data-toggle="collapse" data-target="#toggle-2"></div> -->
       <div class="v-label">
-        <h4 data-toggle="collapse" data-target="#toggle-1">Social Entrepreneur</h4>
-        <p id="toggle-1" class="collapse in"> Co-founder of <a href="http://ouwetaart.amsterdam">OuweTaart.amsterdam</a>, this platform is designed to bring together two groups in society that not often enough have the pleasure to spend time with each other. By facilitating the platform where demand and supply meet we hope to provide elder citizens with an increase in personal value creation and young people with the option to buy an artisanal product or service made especially for them.
-        </div>
-      </li>
-      <li>
-        <time class="v-time"><span>2015 - Present</span></time>
-        <!-- <div class="v-icon" data-toggle="collapse" data-target="#toggle-2"></div> -->
-        <div class="v-label">
-         <h4 data-toggle="collapse" data-target="#toggle-2">Brainstormer</h4>
-         <p id="toggle-2" class="collapse">Denk-Tenk is about the activation of creative and innovative thinking processes.</p>
-       </div>
-     </li>
-     <li>
-      <time class="v-time"><span>2015</span></time>
-      <!-- <div class="v-icon" data-toggle="collapse" data-target="#toggle-3"></div> -->
-      <div class="v-label">
-       <h4 data-toggle="collapse" data-target="#toggle-3">Trainee</h4>
-       <p id="toggle-3" class="collapse"><a href="http://www.starters4communities.nl">Starters4Communities</a><br> By linking starters on the Labor Market to entrepreneurial neighborhood initiatives and using new forms of cooperation and design thinking we innovate together; a bottom-up search for the solutions and challenges of todays world.</p>
+        <h4 data-toggle="collapse" data-target="#toggle-1">Junior Developer, <a href="http://voormedia.com/">Voormedia</a></h4>
+        <p id="toggle-1" class="collapse in">We create websites, produce video and build applications. Our expertise and software enables companies to serve customers online.</p>
      </div>
    </li>
    <li>
-    <time class="v-time"><span>2010-2015</span></time>
-    <!-- <div class="v-icon" data-toggle="collapse" data-target="#toggle-4"></div> -->
+    <time class="v-time"><span>2015 - present</span></time>
+    <!-- <div class="v-icon" data-toggle="collapse" data-target="#toggle-1"></div> -->
+      <div class="v-label">
+        <h4 data-toggle="collapse" data-target="#toggle-2">Social Entrepreneur</h4>
+        <p id="toggle-2" class="collapse"> Co-founder of <a href="http://ouwetaart.amsterdam">OuweTaart.amsterdam</a>, this platform is designed to bring together two groups in society that not often enough have the pleasure to spend time with each other. By facilitating the platform where demand and supply meet we hope to provide elder citizens with an increase in personal value creation and young people with the option to buy an artisanal product or service made especially for them.
+      </div>
+    </li>
+    <li>
+      <time class="v-time"><span>2015</span></time>
+      <!-- <div class="v-icon" data-toggle="collapse" data-target="#toggle-2"></div> -->
+      <div class="v-label">
+       <h4 data-toggle="collapse" data-target="#toggle-3">Brainstormer</h4>
+       <p id="toggle-3" class="collapse">Denk-Tenk is about the activation of creative and innovative thinking processes.</p>
+     </div>
+   </li>
+   <li>
+    <time class="v-time"><span>2015</span></time>
+    <!-- <div class="v-icon" data-toggle="collapse" data-target="#toggle-3"></div> -->
     <div class="v-label">
-     <h4 data-toggle="collapse" data-target="#toggle-4">Manager/Assistant-Manager</h4>
-     <p id="toggle-4" class="collapse">De Biertuin Amsterdam (Bar), Kade58 (Restaurant).</p>
+     <h4 data-toggle="collapse" data-target="#toggle-4">Trainee</h4>
+     <p id="toggle-4" class="collapse"><a href="http://www.starters4communities.nl">Starters4Communities</a><br> By linking starters on the Labor Market to entrepreneurial neighborhood initiatives and using new forms of cooperation and design thinking we innovate together; a bottom-up search for the solutions and challenges of todays world.</p>
    </div>
  </li>
+ <li>
+  <time class="v-time"><span>2010-2015</span></time>
+  <!-- <div class="v-icon" data-toggle="collapse" data-target="#toggle-4"></div> -->
+  <div class="v-label">
+   <h4 data-toggle="collapse" data-target="#toggle-5">Manager/Assistant-Manager</h4>
+   <p id="toggle-5" class="collapse">De Biertuin Amsterdam (Bar), Kade58 (Restaurant).</p>
+ </div>
+</li>
 </ul>
 </section>
 
