--- a/source/stylesheets/components/_app.css.scss
+++ b/source/stylesheets/components/_app.css.scss
@@ -489,6 +489,7 @@ p.copyright {
   text-transform: uppercase;
   font-size: 12px;
   font-weight: 400;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 .navbar-default .navbar-nav > .open > a,
 .navbar-default .navbar-nav > .open > a:hover,
@@ -888,6 +889,11 @@ form.signup button.btn {
   margin: 30px 0 10px;
   line-height: 1.30208333em;
 }
+
+.hobbies {
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
+
 #signupForm .form-control-feedback {
   visibility: hidden;
 }
