--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -69,44 +69,52 @@ title: Daniel Gordon
 <div class="row">
  <div class="col-sm-12">
   <ul class="v-timeline mt50">
-    <li>
+  <li>
       <time class="v-time"><span>2016 - Present</span></time>
       <!-- <div class="v-icon" data-toggle="collapse" data-target="#toggle-2"></div> -->
       <div class="v-label">
-        <h4 data-toggle="collapse" data-target="#toggle-1">Junior Developer, <a href="http://voormedia.com/">Voormedia</a></h4>
-        <p id="toggle-1" class="collapse in">We create websites, produce video and build applications. Our expertise and software enables companies to serve customers online.</p>
+        <h4 data-toggle="collapse" data-target="#toggle-1">Developer, <a href="http://oefenweb.nl/">Oefenweb</a></h4>
+        <p id="toggle-1" class="collapse in">Oefenweb.nl is a spin-off company of the University of Amsterdam (UvA). Products of Oefenweb.nl are web based training-tracking systems to playfully train and measure mathematical or language skills. The products are adaptive; the difficulty of the exercises thus automatically adjusts to the skills of each child. This way the exercises stay challenging for every pupil. Oefenweb seeks to bridge the gap between education and science by using the collected anonymised data will be to develop new scientific insights.</p>
+     </div>
+   </li>
+    <li>
+      <time class="v-time"><span>2016</span></time>
+      <!-- <div class="v-icon" data-toggle="collapse" data-target="#toggle-2"></div> -->
+      <div class="v-label">
+        <h4 data-toggle="collapse" data-target="#toggle-2">Junior Developer, <a href="http://voormedia.com/">Voormedia</a></h4>
+        <p id="toggle-2" class="collapse"> This agency creates websites, produces video and builds applications. Their expertise and software enables companies to serve customers online. Over the course of three months I helped build <a href="http://www.taxology.nl">Protocol.</a> This web app eases the process of reclaiming WHT on foreign dividends. </p>
      </div>
    </li>
    <li>
     <time class="v-time"><span>2015 - present</span></time>
     <!-- <div class="v-icon" data-toggle="collapse" data-target="#toggle-1"></div> -->
       <div class="v-label">
-        <h4 data-toggle="collapse" data-target="#toggle-2">Social Entrepreneur</h4>
-        <p id="toggle-2" class="collapse"> Co-founder of <a href="http://ouwetaart.amsterdam">OuweTaart.amsterdam</a>, this platform is designed to bring together two groups in society that not often enough have the pleasure to spend time with each other. By facilitating the platform where demand and supply meet we hope to provide elder citizens with an increase in personal value creation and young people with the option to buy an artisanal product or service made especially for them.
+        <h4 data-toggle="collapse" data-target="#toggle-3">Social Entrepreneur</h4>
+        <p id="toggle-3" class="collapse"> Co-founder of <a href="http://ouwetaart.amsterdam">OuweTaart.amsterdam</a>, this platform is designed to bring together two groups in society that not often enough have the pleasure to spend time with each other. By facilitating the platform where demand and supply meet we hope to provide elder citizens with an increase in personal value creation and young people with the option to buy an artisanal product or service made especially for them.
       </div>
     </li>
     <li>
       <time class="v-time"><span>2015</span></time>
       <!-- <div class="v-icon" data-toggle="collapse" data-target="#toggle-2"></div> -->
       <div class="v-label">
-       <h4 data-toggle="collapse" data-target="#toggle-3">Brainstormer</h4>
-       <p id="toggle-3" class="collapse">Denk-Tenk is about the activation of creative and innovative thinking processes.</p>
+       <h4 data-toggle="collapse" data-target="#toggle-4">Brainstormer</h4>
+       <p id="toggle-4" class="collapse">Denk-Tenk is about the activation of creative and innovative thinking processes.</p>
      </div>
    </li>
    <li>
     <time class="v-time"><span>2015</span></time>
     <!-- <div class="v-icon" data-toggle="collapse" data-target="#toggle-3"></div> -->
     <div class="v-label">
-     <h4 data-toggle="collapse" data-target="#toggle-4">Trainee</h4>
-     <p id="toggle-4" class="collapse"><a href="http://www.starters4communities.nl">Starters4Communities</a><br> By linking starters on the Labor Market to entrepreneurial neighborhood initiatives and using new forms of cooperation and design thinking we innovate together; a bottom-up search for the solutions and challenges of todays world.</p>
+     <h4 data-toggle="collapse" data-target="#toggle-5">Trainee</h4>
+     <p id="toggle-5" class="collapse"><a href="http://www.starters4communities.nl">Starters4Communities</a><br> By linking starters on the Labor Market to entrepreneurial neighborhood initiatives and using new forms of cooperation and design thinking we innovate together; a bottom-up search for the solutions and challenges of todays world.</p>
    </div>
  </li>
  <li>
   <time class="v-time"><span>2010-2015</span></time>
   <!-- <div class="v-icon" data-toggle="collapse" data-target="#toggle-4"></div> -->
   <div class="v-label">
-   <h4 data-toggle="collapse" data-target="#toggle-5">Manager/Assistant-Manager</h4>
-   <p id="toggle-5" class="collapse">De Biertuin Amsterdam (Bar), Kade58 (Restaurant).</p>
+   <h4 data-toggle="collapse" data-target="#toggle-6">Manager/Assistant-Manager</h4>
+   <p id="toggle-6" class="collapse">De Biertuin Amsterdam (Bar), Kade58 (Restaurant).</p>
  </div>
 </li>
 </ul>
