--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -74,7 +74,7 @@ title: Daniel Gordon
       <!-- <div class="v-icon" data-toggle="collapse" data-target="#toggle-2"></div> -->
       <div class="v-label">
         <h4 data-toggle="collapse" data-target="#toggle-1">Developer, <a href="http://oefenweb.nl/">Oefenweb</a></h4>
-        <p id="toggle-1" class="collapse in">Oefenweb.nl is a spin-off company of the University of Amsterdam (UvA). Products of Oefenweb.nl are web based training-tracking systems to playfully train and measure mathematical or language skills. The products are adaptive; the difficulty of the exercises thus automatically adjusts to the skills of each child. This way the exercises stay challenging for every pupil. Oefenweb seeks to bridge the gap between education and science by using the collected anonymised data will be to develop new scientific insights.</p>
+        <p id="toggle-1" class="collapse in">Oefenweb.nl is a spin-off company of the University of Amsterdam (UvA). Products of Oefenweb.nl are web based training-tracking systems to playfully train and measure mathematical or language skills. The products are adaptive; the difficulty of the exercises thus automatically adjusts to the skills of each child. This way the exercises stay challenging for every pupil. Oefenweb seeks to bridge the gap between education and science by using the collected anonymised data to develop new scientific insights.</p>
      </div>
    </li>
     <li>
@@ -258,6 +258,7 @@ title: Daniel Gordon
         <li><i class="fa-li fa fa-check"></i>HTML5</li>
         <li><i class="fa-li fa fa-check"></i>CSS3</li>
         <li><i class="fa-li fa fa-check"></i>SASS</li>
+        <li><i class="fa-li fa fa-check"></i>LESS</li>
         <li><i class="fa-li fa fa-check"></i>Bootstrap</li>
       </ul>
     </div>
@@ -271,6 +272,15 @@ title: Daniel Gordon
         <li><i class="fa-li fa fa-check"></i>jQuery</li>
       </ul>
     </div>
+    <!-- <div class="col-xs-6 col-sm-4 col-md-3">
+      <div class="text-center">
+        <img src="images/php.svg" alt="PHP" width="50px" style="padding: 10px;">
+        <h5>PHP</h5>
+      </div>
+      <ul class="fa-ul skills-ul prog-ul">
+        <li><i class="fa-li fa fa-check"></i>CakePHP</li>
+      </ul>
+    </div> -->
   </div>
   <div class="row text-center">
     <div class="col-xs-6 col-sm-4 col-md-3">
@@ -279,6 +289,7 @@ title: Daniel Gordon
         <li><i class="fa-li fa fa-check"></i>Git & Github</li>
         <li><i class="fa-li fa fa-check"></i>Heroku</li>
         <li><i class="fa-li fa fa-check"></i>Command Line</li>
+        <li><i class="fa-li fa fa-check"></i>SCRUM</li>
       </ul>
     </div>
     <div class="col-xs-6 col-sm-4 col-md-3">
