--- a/source/stylesheets/components/_app.css.scss
+++ b/source/stylesheets/components/_app.css.scss
@@ -28,7 +28,7 @@ body {
   color: #fff;
   line-height: 1.6em;
   padding-left: 0 !important;
-  background-image:image-url('me.jpg');
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.75) 100%, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.9) 100%), image-url('me.jpg');
   background-attachment: fixed;
   background-position: center;
   background-size: cover;
@@ -36,6 +36,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   -webkit-overflow-scrolling: touch;
 }
+
 
 .about {
   border-radius: 1px;
