--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -3,46 +3,69 @@ title: Daniel Gordon
 ---
 <!-- Main -->
 <section class="main" id="home">
- <div class="page">
-  <div class="wrapper">
-   <div class="container">
-    <h1 class="heading">Daniel Gordon</h1>
-    <p>
-     <span class="hobbies">Sociologist, Entrepreneur, Ruby-ist, Freelancer, Software Developer, Music Lover. </span>
-   </p>
- </div>
- <div class="arrow-down">
-  <a class="scroll" href="#me" id="scroll"><i class="fa fa-angle-double-down"></i></a>
-</div>
-</div>
-</div>
+  <div class="page">
+    <div class="wrapper">
+      <div class="container">
+        <h1 class="heading">Daniel Gordon</h1>
+        <p>
+        <span class="hobbies">Sociologist, Entrepreneur, Ruby-ist, Freelancer, Software Developer, Music Lover. </span>
+        </p>
+      </div>
+      <div class="arrow-down">
+        <a class="scroll" href="#me" id="scroll"><i class="fa fa-angle-double-down"></i></a>
+      </div>
+    </div>
+  </div>
 </section>
 
-<!-- About -->
+<!-- About me -->
 <section id="me" class="section section-solid">
- <div class="container">
-  <div class="row">
-   <div class="col-sm-12">
-    <h3 class="section-title">Me</h3>
-    <div class="section-title-border"></div>
-  </div>
-</div>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12">
+        <h3 class="section-title">Me</h3>
+        <div class="section-title-border"></div>
+      </div>
+    </div>
 
-<div class="row mt20">
- <div class="col-sm-4">
-  <img src="images/daniel.jpg" class="img-responsive about-img" />
-</div>
-<div class="col-sm-8">
-  <div class="about">
-    <p class="lead">
-     I'm a Sociologist that shifted to building web applications using Ruby on Rails.
-   </p>
-   <p>
-    After graduating in Sociology on a thesis regarding young entrepreneurs in Shenzhen <em>(considered the Silicon Valley of hardware)</em> my interest in the the tech- and startup scene was sparked. Upon following a traineeship towards social entrepreneurship and starting my own social startup I decided I wanted to learn how to code. <a href="http://www.lewagon.org/en">Le Wagon</a> Dev bootcamp gave me the tools to work in a tech-company as a developer or to take my own startup to the next level.
-  </p>
-</div>
-</div>
-</div>
+    <div class="profile text-center">
+      <div class="left-col">
+        <div class="col-content">
+          <img src="images/daniel.jpg" alt="" width="400" class="img-responsive about-img">
+          <h2>Daniel Gordon</h2>
+          Freelance Developer/<a href="http://lewagon.com/">TA @ Le Wagon</a>
+          <a href="#" class="btn btn-default btn-lg">Get in touch</a>
+        </div>
+      </div>
+      <div class="stat">
+        <div class="stat-content">
+          <h3>3,536</h3>
+          <div class="col-sm-12 text-center">
+          <a href="https://github.com/DanielGordon1"><i class="fa fa-github" style="font-size: 80px;"></i></a>
+      </div>
+        </div>
+      </div>
+      <div class="stat">
+        <div class="stat-content">
+          <h3>Github</h3>
+          <p>followers</p>
+        </div>
+        </div>
+      <div class="stat">
+        <div class="stat-content">
+          <h3>119</h3>
+          <p>repositories</p>
+        </div>
+        </div>
+      <div class="description">
+        <div class="description-content">
+          <p class="text-justify">
+          I'm a Sociologist that shifted to building web applications using Ruby on Rails.  After graduating in Sociology on a thesis regarding young entrepreneurs in Shenzhen <em>(considered the Silicon Valley of hardware)</em> my interest in the the tech- and startup scene was sparked. Upon following a traineeship towards social entrepreneurship and starting my own social startup I decided I wanted to learn how to code. <a href="http://www.lewagon.org/en">Le Wagon</a> Dev bootcamp gave me the tools to work in a tech-company as a developer or to take my own startup to the next level.</p>
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
 </section>
 
 
@@ -50,9 +73,7 @@ title: Daniel Gordon
 <section class="section">
   <div class="container">
     <div class="row">
-      <div class="col-sm-12 text-center">
-        <a href="https://github.com/DanielGordon1"><i class="fa fa-github" style="font-size: 80px;"></i></a>
-      </div>
+
     </div>
   </div>
 </section>
