--- a/source/stylesheets/components/_app.css.scss
+++ b/source/stylesheets/components/_app.css.scss
@@ -50,6 +50,7 @@ body {
 
 .about-img {
   border-radius: 2px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.7);
 }
 
 h1 {
@@ -474,11 +475,11 @@ p.copyright {
 /*
  *	Container
  *  --------------------------------------------------------- */
-@media (min-width: 1200px) {
-  .container {
-    width: 1000px;
-  }
-}
+// @media (min-width: 1200px) {
+//   .container {
+//     width: 1000px;
+//   }
+// }
 /*
  *	Navigation
  *  --------------------------------------------------------- */
