Put contact and skills in partials.

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -232,139 +232,9 @@ title: Daniel Gordon
   </div>
 </div>
 </section>
-<!-- Skills -->
-<section class="section" id="skills">
- <div class="container">
-  <div class="row">
-   <div class="col-sm-12">
-    <h3 class="section-title">Skills</h3>
-    <div class="section-title-border"></div>
-  </div>
-</div>
-<div class="row personal-skills">
- <div class="col-sm-8 wow fadeInLeft" data-wow-duration="0.7s" data-wow-delay="0s">
-  <h4>Non-Human languages</h4>
-  <div class="row">
-    <div class="col-xs-6 col-sm-4 col-md-3">
-      <div class="text-center">
-        <i class="fa fa-diamond" style="font-size: 30px; padding: 10px;"></i>
-        <h5>Ruby &amp; Ruby on Rails</h5>
-      </div>
-      <ul class="fa-ul skills-ul prog-ul">
-        <li><i class="fa-li fa fa-check"></i>Ruby</li>
-        <li><i class="fa-li fa fa-check"></i>Ruby on Rails</li>
-        <li><i class="fa-li fa fa-check"></i>PostgreSQL</li>
-        <li><i class="fa-li fa fa-check"></i>RESTful API</li>
-      </ul>
-    </div>
-    <div class="col-xs-6 col-sm-4 col-md-3">
-      <div class="text-center">
-        <i class="fa fa-html5 prog-logo" style="font-size: 30px; padding: 10px;"></i>
-        <h5>HTML &amp; CSS</h5>
-      </div>
-      <ul class="fa-ul skills-ul prog-ul">
-        <li><i class="fa-li fa fa-check"></i>HTML5</li>
-        <li><i class="fa-li fa fa-check"></i>CSS3</li>
-        <li><i class="fa-li fa fa-check"></i>SASS</li>
-        <li><i class="fa-li fa fa-check"></i>LESS</li>
-        <li><i class="fa-li fa fa-check"></i>Bootstrap</li>
-      </ul>
-    </div>
-    <div class="col-xs-6 col-sm-4 col-md-3">
-      <div class="text-center">
-        <img src="images/js.svg" alt="Javascript" width="50px" style="padding: 10px;">
-        <h5>Javascript</h5>
-      </div>
-      <ul class="fa-ul skills-ul prog-ul">
-        <li><i class="fa-li fa fa-check"></i>Javascript</li>
-        <li><i class="fa-li fa fa-check"></i>jQuery</li>
-      </ul>
-    </div>
-    <!-- <div class="col-xs-6 col-sm-4 col-md-3">
-      <div class="text-center">
-        <img src="images/php.svg" alt="PHP" width="50px" style="padding: 10px;">
-        <h5>PHP</h5>
-      </div>
-      <ul class="fa-ul skills-ul prog-ul">
-        <li><i class="fa-li fa fa-check"></i>CakePHP</li>
-      </ul>
-    </div> -->
-  </div>
-  <div class="row text-center">
-    <div class="col-xs-6 col-sm-4 col-md-3">
-      <h4>Tools</h4>
-      <ul class="fa-ul skills-ul">
-        <li><i class="fa-li fa fa-check"></i>Git & Github</li>
-        <li><i class="fa-li fa fa-check"></i>Heroku</li>
-        <li><i class="fa-li fa fa-check"></i>Command Line</li>
-        <li><i class="fa-li fa fa-check"></i>SCRUM</li>
-      </ul>
-    </div>
-    <div class="col-xs-6 col-sm-4 col-md-3">
-      <h4>Hobbies</h4>
-      <ul class="fa-ul skills-ul">
-        <li><i class="fa-li fa fa-plane"></i>Travelling</li>
-        <li><i class="fa-li fa fa-headphones"></i>Music</li>
-        <li><i class="fa-li fa fa-video-camera"></i>Series</li>
-        <li><i class="fa-li fa fa-book"></i>Learning new things</li>
-      </ul>
-    </div>
-  </div>
-</div>
-</section>
 
-<!-- Contact -->
-<section id="contact" class="section">
- <div class="container">
-  <div class="row">
-   <div class="col-sm-12">
-    <h3 class="section-title">Contact</h3>
-    <div class="section-title-border"></div>
-  </div>
-</div>
-<div class="row">
- <div class="col-sm-6">
-  <p>
-   Messages sent with this contact form go directly into my inbox. It is the best way to contact me.
- </p>
- <p>
-  I am based in Amsterdam and available for remote freelance work.
-</p>
-<ul class="list-contacts">
- <li><i class="fa fa-mobile-phone"></i> (+31) 639426610</li>
- <li><i class="fa fa-map-marker"></i> Tweede Oosterparkstraat, 125a<br> Amsterdam, 1073HZ</li>
- <li><i class="fa fa-envelope-o"></i> <a href="mailto:d_gordon1@icloud.com">d_gordon1@icloud.com</a></li>
-</ul>
-</div>
-<div class="col-sm-6">
-  <form class="form-horizontal" action="https://formspree.io/d_gordon1@icloud.com" method="post" role="form" id="contactForm">
-   <div class="form-group">
-    <div class="col-sm-6">
-     <input type="text" name="name" class="form-control" placeholder="Name">
-   </div>
-   <div class="col-sm-6">
-     <input type="text" name="contactEmail" class="form-control" placeholder="Email">
-   </div>
- </div>
- <div class="form-group">
-  <div class="col-sm-12">
-   <textarea name="message" class="form-control" rows="8" placeholder="Message"></textarea>
- </div>
-</div>
-<div class="form-group">
-  <div class="col-sm-12">
-    <input type="text" name="_gotcha" style="display:none">
-    <button type="submit" class="btn btn-theme ladda-button" data-style="expand-left">
-     <span class="ladda-label">Submit</span>
-   </button>
- </div>
-</div>
-<input type="text" name="_gotcha" style="display:none" />
-</form>
-</div>
-</div>
-</div>
-</section>
+<%= partial "skills" %>
+<%= partial "contact" %>
 
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
