Add php to skills

--- a/source/_skills.html.erb
+++ b/source/_skills.html.erb
@@ -48,7 +48,7 @@
     </div>
     <div class="col-xs-6 col-sm-4 col-md-3">
       <div class="text-center">
-        <img src="images/php.svg" alt="PHP" width="50px" style="padding: 10px;">
+        <img src="images/php-logo.svg" alt="PHP" height="50px" style="padding: 10px;">
         <h5>PHP</h5>
       </div>
       <ul class="fa-ul skills-ul prog-ul">
